# Attest

Attest/: .env  pyproject.toml
Attest/config/: settings.py  urls.py
Attest/retail/: models.py  serializers.py  urls.py  views.py
FastTest/: db.py  main.py  models.py  presentations.py  schemas.py  services.py
pythonProject9/: main.py
